Alterando pra ver se vai

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>site teste</title>
+    <title>Gama XP35</title>
 </head>
 <body>
     <h1>Hello World!!</h1>
-    <p>Gama Experience XP 35!!!</p>
+ 
 </body>
 </html>
