--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <p>Gama Experience XP 35!!!</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus consequatur minima nulla provident eos veritatis dicta reiciendis odit repudiandae, quo soluta libero repellat illo itaque eaque perspiciatis inventore impedit alias.</p>
+    
+    <h3> Dale Dale</h3>
+    
 </html>
