comitando a ultima vez

--- a/index.html
+++ b/index.html
@@ -9,8 +9,5 @@
     <h1>Hello World!!</h1>
     <p>Gama Experience XP 35!!!</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus consequatur minima nulla provident eos veritatis dicta reiciendis odit repudiandae, quo soluta libero repellat illo itaque eaque perspiciatis inventore impedit alias.</p>
-    
-    <h3> Dale Dale</h3>
-    
+    <p>Dale Dale</p>
 </html>
